[package]
name = "ann-tool-box"
version = "0.5.0"
description = "Some kind of a tool box by ANNIe."
authors = ["ANNIe Eyre"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.2", features = ["macos-private-api", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.0.1"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-fs = "2.0.1"
showfile = "0.1.1"
# taurpc = "0.2.7"
# specta = { version = "=2.0.0-rc.9", features = ["export"] }
# tokio = { version = "1", features = ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
